--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,78 @@
+* {
+  box-sizing: border-box;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  padding: 10px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.searchBar {
+  margin: 30px 0;
+  display: flex;
+  justify-content: center;
+}
+.searchBar input {
+  background-color: whitesmoke;
+  padding: 10px 5px;
+  width: 300px;
+  font-size: 16px;
+  border-radius: 2px;
+  margin: 0 5px;
+}
+.searchBar input:focus {
+  background-color: white;
+}
+.searchBar button {
+  padding: 10px 20px;
+  font-size: 16px;
+  color: white;
+  background-color: rgb(87, 87, 255);
+  border-color: black;
+  border-radius: 2px;
+  margin: 0 5px;
+  outline: none;
+  cursor: pointer;
+}
+.searchBar button:active {
+  background-color: rgb(46, 46, 253);
+}
+.result-box {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.card-box {
+  width: 300px;
+  margin: 10px;
+  overflow: hidden;
+  border-radius: 20px;
+  color:white;
+  background-color: rgb(87, 87, 255);
+}
+.card-img{
+  padding: 0;
+  margin: 0;
+}
+.card-img img {
+  width: 100%;
+  height: 430px;
+}
+.card-title {
+  padding: 10px;
+}
+
+.card-title h3 {
+  margin: 0;
+  padding: 0;
 }
